--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -100,18 +100,20 @@
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
+
                     <TextView
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginRight="15dp"
-                        android:typeface="sans"
                         android:id="@+id/sofa_creator"
-                        android:layout_width="wrap_content"
+                        android:layout_width="220dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="15dp"
+                        android:layout_gravity="center_vertical"
                         android:layout_marginBottom="15dp"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginRight="15dp"
                         android:text="@string/sofa_creator"
                         android:textColor="@color/logo_red"
-                        android:textSize="40sp" />
+                        android:textSize="40sp"
+                        android:typeface="sans" />
+
                     <ImageView
                         android:id="@+id/camera3"
                         android:src="@drawable/camera_red"
