added new curtain collections up to irina.

--- a/app/src/main/res/layout/item_color.xml
+++ b/app/src/main/res/layout/item_color.xml
@@ -16,6 +16,7 @@
         android:layout_height="99dp" />
 
     <TextView
+        android:gravity="center"
         android:visibility="invisible"
         android:id="@+id/color_txt"
         android:typeface="sans"
